# loop

./: Cargo.toml  README.md  TODO.md  flake.nix  install.sh  looop  loop
.github/workflows/: ci.yml  release.yml
assets/: README.md
src/: babysit.rs  cli.rs  client.rs  config.rs  contract.rs  cost.rs  deps.rs  executor.rs  gate.rs  help.rs  init.rs  journal.rs  mailbox.rs  main.rs  manual.txt  paths.rs  prompt.rs  run.rs  runner.rs  seed.rs  sensor.rs  service.rs  session.rs  status.rs  store.rs  surface.rs  tick.rs  util.rs  watch.rs  worldhash.rs
src/completions/: looop.bash  looop.zsh
src/seed/: PLAYBOOK.md  playbook-daily.md  setup.md
